@@ -1,3 +1,8 @@
+Mon Oct  4 09:42:31 2004  Tim Janik  <timj@gtk.org>
+
+	* bsepcmdevice-alsa.c: more libALSA silencing, to prevent error messages
+	in blocking mode with xrun-stop enabled.
+
 Mon Oct  4 09:16:16 2004  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-alsa.c (alsa_device_write): use snd_pcm_forward() and
